--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 * {
    box-sizing: border-box;
+   margin: 0;
 }
 
 header{
@@ -8,6 +9,7 @@ header{
 
 body{
     background-color: lightslategray;
+
 }
 
 footer{
