--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,9 @@
 /* COMPONENTS */
 @import url("./components/header.css");
 @import url("./components/main-screen.css");
+@import url("./components/gallery.css");
+@import url("./components/editor.css");
+@import url("./components/memes-display.css");
 
 
 @import url("./setup/mq.css");
