--- a/styles/style.css
+++ b/styles/style.css
@@ -12,10 +12,12 @@
 
 /* COMPONENTS */
 @import url("./components/header.css");
+@import url("./components/footer.css");
 @import url("./components/main-screen.css");
 @import url("./components/gallery.css");
 @import url("./components/editor.css");
 @import url("./components/memes-display.css");
+@import url("./components/memes.css");
 
 
 @import url("./setup/mq.css");
